--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </nav>
         <div class="content">
             <h4>Hello, My self</h4>
-            <h1>MOHD <span>ZIYAUL BEG</span></h1>
+            <h1>MOHD <span>ZIAUL BEG</span></h1>
             <h3>I am a Software Developer</h3>
             <div class="newsletter">
                 <form>
